--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <nav class="navbar">
-    <nav class="navbar navbar-light bg-clear">
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <nav class="navbar navbar-light bg-clear col-lg-9">
+      <form class="form-inline col-lg-9">
+        <input class="form-control col-lg-9" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </nav>
