Adding Image section to js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,6 +21,7 @@
     </nav>
   </nav>
   <div class="container-fluid">
+      <img src="" class="api-image" alt="GET return Pic"> 
     <div class="row mt-4">
       <div class="col-sm-12 col-md-6 offset-md-3">
         <div class="jumbotron">
