added api ajax and bootstrap image div

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,7 +21,7 @@
     </nav>
   </nav>
   <div class="container-fluid">
-      <img src="" class="api-image" alt="GET return Pic"> 
+      <img src="..." class="img-fluid" id="get-response-pic" alt="GET response pic">     
     <div class="row mt-4">
       <div class="col-sm-12 col-md-6 offset-md-3">
         <div class="jumbotron">
