Added ebay button

--- a/public/html/ebay-search.html
+++ b/public/html/ebay-search.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <div class="row">
     <div class="col-2"></div>
     <div class="col-8">
@@ -21,7 +20,7 @@
         <input id="input" type="text" class="form-control" placeholder="Ebay Search" aria-label="Ebay Search"
           aria-describedby="button-addon2">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button" id="searchBTN">Search!</button>
+          <button class="btn btn-outline-dark" type="button" id="searchBTN">Search!</button>
         </div>
       </div>
 
@@ -29,6 +28,8 @@
     <div class="col-2"></div>
     <div class="col-2"></div>
     <div id="outputrow" class="col-8"></div>
+
+
 
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
@@ -38,6 +39,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
   <script src="../javascript/ebay.js"></script>
+
 </body>
 
 </html>
