--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Project One</title>
+  <title>New or Used?</title>
   <meta name="description" content="Project 1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,9 +23,7 @@
         <div class="input-group-append">
           <button class="btn btn-dark" type="button" id="searchBTN">Search!</button>
           <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
-            class="btn btn-dark btn-sm" data-toggle="popover" title="Sell Your Item on Ebay"
-            data-content="test content <a href='' title=''>link on content</a>" data-original-title="test title">Sell
-            Your Item on Ebay</a>
+            class="btn btn-dark btn-sm" data-toggle="popover" title="Sell Your Item on Ebay">Sell Your Item on Ebay!</a>
 
         </div>
       </div>
