changed ebay button text size

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,9 +21,9 @@
         <input id="input" type="text" class="form-control" placeholder="Walmart Search" aria-label="Walmart Search"
           aria-describedby="button-addon2">
         <div class="input-group-append">
-          <button class="btn btn-dark" type="button" id="searchBTN">Search!</button>
+          <button class="btn btn-dark" type="button" id="searchBTN">Search</button>
           <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
-            class="btn btn-dark btn-sm" data-toggle="popover" title="Sell Your Item on Ebay">Sell Your Item on Ebay!</a>
+            class="btn btn-dark btn-md" data-toggle="popover" title="Sell Your Item on Ebay">Sell Your Item on Ebay!</a>
 
         </div>
       </div>
