--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,7 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link type="image/png" sizes="64x64" href="../images/team-rocket.png">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
           <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
             class="btn btn-dark btn-md container fluid" data-toggle="popover" title="Get Those Stacks">Sell Your Item on Ebay!</a>
         </div>
-      
+
 
     </div>
     <div class="col-2"></div>
