Added reset css and favicon

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,7 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
-  <link type="image/png" sizes="64x64" href="../images/team-rocket.png">
+  <link rel="shortcut icon" href="public\images\team-rocket.png" type="image/x-icon" />
 </head>
 
 <body>
