--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,11 +6,11 @@
   <title>New or Used?</title>
   <meta name="description" content="Project 1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="public\css\reset.css">
+  <link rel="stylesheet" href="..\css\reset.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="public\css\style.css">
-  <link rel="shortcut icon" href="public\images\team-rocket.png" type="image/x-icon" />
+  <link rel="stylesheet" href="..\css\style.css">
+  <link rel="shortcut icon" href="..\images\team-rocket.png" type="image/x-icon" />
 </head>
 
 <body>
