--- a/public/html/index.html
+++ b/public/html/index.html
@@ -35,6 +35,8 @@
     <div class="col-2"></div>
     <div id="outputrow" class="col-8"></div>
 
+    <div id="chartContainer" class="mx-auto" style="height: 370px; width: 50%;"></div>
+
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -42,6 +44,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+  <script src="../javascript/canvasjs.min.js"></script>
+  <script src="../javascript/moment.min.js"></script>
   <script src="../javascript/scripts.js"></script>
 </body>
 
