--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,11 +6,11 @@
   <title>New or Used?</title>
   <meta name="description" content="Project 1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="..\css\reset.css">
+  <link rel="stylesheet" href="./static/css/reset.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="..\css\style.css">
-  <link rel="shortcut icon" href="..\images\team-rocket.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./static/css/style.css">
+  <link rel="shortcut icon" href="./static/images/team-rocket.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -44,9 +44,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
-  <script src="../javascript/canvasjs.min.js"></script>
-  <script src="../javascript/moment.min.js"></script>
-  <script src="../javascript/scripts.js"></script>
+  <script src="./static/javascript/canvasjs.min.js"></script>
+  <script src="./static/javascript/moment.min.js"></script>
+  <script src="./static/javascript/scripts.js"></script>
 </body>
 
 </html>
