changed button description

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,7 +26,7 @@
         <div class="input-group-append container fluid">
           <button class="btn btn-dark container fluid" type="button" id="searchBTN">Search</button>
           <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
-            class="btn btn-dark btn-md container fluid" data-toggle="popover" title="Get Those Stacks">Sell Your Item on Ebay!</a>
+            class="btn btn-dark btn-md container fluid" data-toggle="popover" title="Get Those Stacks">Sell/Buy Your Item on Ebay!</a>
         </div>
 
 
