--- a/public/html/graph.html
+++ b/public/html/graph.html
@@ -22,12 +22,13 @@
       <div id="inputBar" class="input-group mb-3">
         <input id="input" type="text" class="form-control" placeholder="Walmart Search" aria-label="Walmart Search"
           aria-describedby="button-addon2">
-        </div>
-        <div class="input-group-append container fluid">
-          <button class="btn btn-dark container fluid" type="button" id="searchBTN">Search</button>
-          <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
-            class="btn btn-dark btn-md container fluid" data-toggle="popover" title="Get Those Stacks">Sell Your Item on Ebay!</a>
-        </div>
+      </div>
+      <div class="input-group-append container fluid">
+        <button class="btn btn-dark container fluid" type="button" id="searchBTN">Search</button>
+        <a href="https://signin.ebay.com/ws/eBayISAPI.dll?SignIn&ru=https%3A%2F%2Fwww.ebay.com%2F" role="button"
+          class="btn btn-dark btn-md container fluid" data-toggle="popover" title="Get Those Stacks">Sell Your Item on
+          Ebay!</a>
+      </div>
 
 
     </div>
